# tps-qt

./: README.md  guicheck.sh
tp2/: CMakeLists.txt  Readme.md
tp2/Calculator/: Calculator.pro  mainwindow.cpp  mainwindow.h  resources.qrc
tp2/Jantet_Ravix/: Calculator.pro  CalculatorModel.cpp  CalculatorModel.h  files.txt  main.cpp  mainwindow.cpp  mainwindow.h
tp2/build-Calculator-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_predefs.h  qrc_resources.cpp
tp2/build-Calculator-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
tp2/build-Calculator-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: CalculatorModel.cpp.CA388C23CE8BB492.idx  CalculatorModel.h.730989FAEBF80E21.idx  QAction.838E4D24678776E0.idx  QButtonGroup.E61662932B886EDA.idx  QComboBox.19F0AE22D64DFEFB.idx  QGridLayout.14A6AAD282FF0A29.idx  QIcon.D65095BD8C627DC1.idx  QLabel.2FDA37448CC71B9E.idx  QLineEdit.99544AFFEA5DDB0D.idx  QMainWindow.A4429C6E15196A17.idx  QMenu.F75AD63C209D3CDB.idx  QMenuBar.20C007A37BC6A07E.idx  QMessageBox.EC8857858526FFC2.idx  QPushButton.468AA212E508E057.idx  QRegularExpression.8DB5AA451E041692.idx  QString.43A8BE6A83B13F80.idx  QVBoxLayout.CA4FA886D36471B0.idx  QWidget.72D728E526D81A16.idx  __availability.3D2717B933B30676.idx  __bit_reference.4565313E7DC9CBCF.idx  (+304 more)
tp2/build-Calculator-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Calculator.app/Contents/: Info.plist
tp2/build-Calculator-Desktop_arm_darwin_generic_mach_o_64bit-Debug/Calculator.app/Contents/MacOS/: Calculator
(+23 files in other folders)
